[package]
name = "octosurfer"
version = "0.2.0"
edition = "2021"
authors = ["Tronje Krabbe"]
description = "Search GitHub, clone matching repos, and search through the repos."
documentation = "https://github.com/tronje/octosurfer"
repository = "https://github.com/tronje/octosurfer"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.69"
argh = "0.1.10"
chrono = "0.4.23"
grep = "0.2.11"
log = "0.4.17"
url = "2.2.2"
walkdir = "2.3.2"

[dependencies.octocrab]
version = "0.18.1"
features = ["rustls"]

[dependencies.simple_logger]
version = "4.0.0"
default-features = false
features = ["colors", "stderr"]

[dependencies.tokio]
version = "1.26.0"
features = ["full"]
